fixed float/wrap issue on group blocks

--- a/docroot/profiles/drupal_commons/themes/commons_environs/css/styles.css
+++ b/docroot/profiles/drupal_commons/themes/commons_environs/css/styles.css
@@ -1129,3 +1129,8 @@ ul.pager a, ul.pager li.pager-current {
 .view .view-content .item-list li.views-row-last {
   border-bottom: none;
 }
+
+/* group block listings */
+.views-field-title, .views-field-members-count, .views-field-posts-count {
+  margin-left: 40px;
+}
